--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
 }
 
+.hidden {
+    display: none;
+}
+
 #main-container {
     /* background-color: aquamarine; */
     position: absolute;
@@ -82,4 +86,61 @@ body {
 #harmony img {
     width: 100%;
     height: 100%;
+}
+
+#onboarding-btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    line-height: 40px;
+    text-align: center;
+    vertical-align: middle;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    color: #888;
+    cursor: pointer;
+    user-select: none;
+}
+#onboarding-btn:hover {
+    color: #555;
+    border-color: #888;
+}
+
+#onboarding {
+    width: 60vw;
+    height: 60vh;
+    position: fixed;
+    left: 20vw;
+    top: 20vh;
+    padding: 20px;
+
+    color: #555;
+    text-align: center;
+
+    border: 1px solid #ccc;
+    border-radius: 10px;
+
+    backdrop-filter: blur(10px);
+}
+
+#onboarding-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    line-height: 33px;
+    text-align: center;
+    vertical-align: middle;
+    color: #888;
+    cursor: pointer;
+    user-select: none;
+}
+
+#onboarding-close:hover {
+    color: #555;
 }
