--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,9 @@ body {
 }
 
 #harmony {
-    position: fixed;
-    top: 550px;
-    left: 250px;
+    position: absolute;
+    left: calc(50% - 490px);
+    top: calc(50% + 200px);
     width: 100px;
     height: auto;
     cursor: pointer;
