--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
     transform: translate(-50%, -50%);
     /* padding-top: 5%; */
     /* padding-bottom: 5%; */
+
+    overflow: hidden;
 }
 
 #video-container {
@@ -30,6 +32,35 @@ body {
     height: 720px;
     position: relative;
 }
+
+#bubbles-container {
+    z-index: 30;
+    width: 1080px;
+    height: 720px;
+    position: absolute;
+    top: 0;
+    cursor: text;
+}
+
+#bubbles-container img {
+    max-height: 100px;
+
+    position: absolute;
+    bottom: 0;
+    animation: bubble-rise 5s linear;
+}
+
+@keyframes bubble-rise {
+    from {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    to {
+      transform: translateY(-500px);
+      opacity: 0;
+    }
+  }
+
 
 .objects {
     display: none;
